[package]
name = "katalyst-bin"
description = "High performance, modular API Gateway"
repository = "https://github.com/proctorlabs/katalyst"
version = "0.2.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["http", "api", "gateway"]
categories = ["network-programming", "web-programming::http-server", "web-programming"]
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "htpasswd",
    "katalyst-macros",
    "katalyst-core",
]

[dependencies]
katalyst = { path = "katalyst-core" }
simple_logger = "1.3"
log = "0.4"
clap = "2.33"
structopt = "0.2"

[[bin]]
name = "katalyst"
path = "katalyst-bin/main.rs"
