[package]
name = "katalyst-macros"
version = "0.2.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
description = "Procedural macros for katalyst"
repository = "https://github.com/proctorlabs/katalyst"
keywords = ["http", "api", "gateway"]
categories = ["network-programming", "web-programming::http-server", "web-programming"]
license = "MIT"
workspace = ".."

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["derive"] }

[lib]
name = "katalyst_macros"
proc-macro = true