[package]
name = "katalyst"
description = "Katalyst is an experimental API Gateway library"
repository = "https://github.com/proctorlabs/katalyst"
version = "0.1.3"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["http", "api", "gateway"]
categories = ["network-programming", "web-programming::http-server", "web-programming"]
license = "MIT"
readme = "../README.md"

[dependencies]
katalyst_macros = { version = "0.1", path = "../katalyst_macros" }
hyper = "0.12"
tokio = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"
failure = "0.1.5"
futures = "0.1"
regex = "1.1"
log = "0.4"
rustls = "0.15"
hyper-rustls = "0.16"
http = "0.1"
lazy_static = "1.3"
webpki-roots = "0.16"
rand = "0.6"
url = "1.7"
base64 = "0.10"
simple_logger = { version = "1.0", optional = true }
clap = { version = "2.33", optional = true }
syn = { version = "0.15", features = ['parsing'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
mime_guess = "1.8"

[features]
default = ["cli"]
cli = ["simple_logger", "clap"]

[dev-dependencies]
simple_logger = "1.0"

[build-dependencies]

[lib]
name = "katalyst"
path = "src/lib.rs"

[[bin]]
name = "katalyst"
path = "src/app/app.rs"
required-features = ["cli"]

[badges]
maintenance = { status = "experimental" }