[package]
name = "katalyst"
description = "High performance, modular API Gateway"
repository = "https://github.com/proctorlabs/katalyst"
version = "0.2.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["http", "api", "gateway"]
categories = ["network-programming", "web-programming::http-server", "web-programming"]
license = "MIT"
readme = "README.md"

[dependencies]
# Base
katalyst_macros = { version = "0.2", path = "../katalyst_macros" }

#Utility
log = "0.4"
lazy_static = "1.3"
rand = "0.6"
derive_more = "0.15"
signal-hook = "0.1"
parking_lot = "0.8"

# HTTP
hyper = "0.12"
rustls = "0.15"
cookie = { version = "0.12", features = ["secure"] }
hyper-rustls = "0.16"
webpki-roots = "0.16"
tokio = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"
tokio-rustls = "0.9"
tokio-tcp = "0.1"
http = "0.1"
url = "1.7"
futures = "0.1"
base64 = "0.10"
mime_guess = "1.8"

#Parsing
unstructured = "0.2.0"
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
pest = { version = "2.1" }
pest_derive = { version = "2.1" }

# CLI
simple_logger = { version = "1.3", optional = true }
clap = { version = "2.33", optional = true }
structopt = { version = "0.2", optional = true }

[features]
default = ["cli"]
cli = ["simple_logger", "clap", "structopt"]

[dev-dependencies]
simple_logger = "1.3"

[build-dependencies]

[lib]
name = "katalyst"
path = "src/lib.rs"

[[bin]]
name = "katalyst"
path = "src/main.rs"
required-features = ["cli"]

[badges]
maintenance = { status = "actively-developed" }
