[package]
name = "katalyst"
description = "Katalyst is an experimental API Gateway library"
repository = "https://github.com/proctorlabs/katalyst"
version = "0.1.3"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
keywords = ["http", "api", "gateway"]
categories = ["network-programming", "web-programming::http-server", "web-programming"]
license = "MIT"
readme = "../README.md"

[dependencies]
hyper = "0.12"
tokio = "0.1"
futures = "0.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
log = "0.4"
rustls = "0.15"
hyper-rustls = "0.16"
http = "0.1"
lazy_static = "1.2"
webpki-roots = "0.16"

[dev-dependencies]
simple_logger = "1.0.1"

[badges]
maintenance = { status = "experimental" }